IN-24: fix: TextField

--- a/src/shared/ui/TextField/TextField.module.scss
+++ b/src/shared/ui/TextField/TextField.module.scss
@@ -1,6 +1,10 @@
 .textField {
   display: flex;
   flex-direction: column;
+
+  font-size: var(--font-size-s);
+  font-weight: var(--font-weight-regular);
+  line-height: var(--line-height-m);
   color: var(--light-900);
 
   span {
@@ -30,18 +34,18 @@
     border: 1px solid var(--light-900);
   }
 
-  &:active {
-    color: var(--light-100);
-    border: 1px solid var(--light-100);
-    outline: none;
-  }
-
-  &:focus-visible {
-    outline: 1px solid var(--primary-500);
-  }
-
   &:disabled {
     color: var(--dark-100);
+  }
+
+  &:focus.active {
+    color: var(--light-100);
+    border: 1px solid var(--light-100);
+  }
+
+  &:focus:not(.active) {
+    border: 1px solid var(--primary-500);
+    outline: 1px solid var(--primary-500);
   }
 }
 
@@ -51,8 +55,13 @@
 }
 
 .search {
-  padding-right: 12px;
+  padding-right: 42px;
   padding-left: 42px;
+
+  &::-webkit-search-cancel-button,
+  &::-webkit-search-decoration {
+    display: none;
+  }
 }
 
 .disabled {
@@ -67,14 +76,15 @@
   color: var(--light-100);
   border: 1px solid var(--danger-500);
 
-  &:hover,
-  &:active {
+  &:hover {
     border: 1px solid var(--danger-500);
   }
 }
 
 .buttonPassword {
   all: unset;
+
+  cursor: pointer;
 
   position: absolute;
   top: 50%;
@@ -96,4 +106,28 @@
   top: 50%;
   left: 12px;
   transform: translateY(-50%);
+
+  &.active {
+    color: var(--light-100);
+  }
+}
+
+.closeBtn {
+  all: unset;
+
+  cursor: pointer;
+
+  position: absolute;
+  top: 50%;
+  right: 12px;
+  transform: translateY(-50%);
+
+  display: flex;
+  align-items: center;
+
+  background: transparent;
+
+  &.active {
+    color: var(--light-100);
+  }
 }
