IN-26: feat: Button

--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -37,6 +37,7 @@
   // dark
   --dark-100: #4c4c4c;
   --dark-300: #333;
+  --dark-400: #212121;
   --dark-500: #171717;
   --dark-700: #0d0d0d;
   --dark-900: #000;
