--- a/src/shared/ui/TextField/TextField.module.scss
+++ b/src/shared/ui/TextField/TextField.module.scss
@@ -13,6 +13,8 @@
 
   color: var(--light-100);
 
+  transition: color 0.3s;
+
   &:disabled {
     color: var(--dark-100);
   }
@@ -54,6 +56,10 @@
   border: none;
   border-radius: 2px;
   outline: 1px solid var(--dark-100);
+
+  transition:
+    color 0.3s,
+    outline-color 0.3s;
 
   &:-webkit-autofill {
     transition: all 5000s ease-in-out 0s;
