--- a/src/app/styles/_typography.scss
+++ b/src/app/styles/_typography.scss
@@ -17,4 +17,7 @@
   --font-weight-medium: 500;
   --font-weight-semibold: 600;
   --font-weight-bold: 700;
+
+  // header
+  --header-height: 60px;
 }
