--- a/src/widgets/sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -13,22 +13,23 @@
   display: flex;
   align-items: center;
   max-width: 100%;
+  font-weight: var(--font-weight-medium);
 
   &:focus-visible {
     border-radius: 2px;
     outline: 2px solid var(--primary-500);
   }
 
-  &.disabledLink {
+  &.disabled {
     pointer-events: none;
     color: var(--dark-100);
   }
 
-  &.fullLink {
+  &.full {
     gap: 0.75rem;
   }
 
-  &.activeLink {
+  &.active {
     font-weight: var(--font-weight-bold);
     color: var(--primary-500);
   }
