IN-35 init: forgot password

--- a/src/feature/auth/ui/ForgotPassword/ForgotPassword.module.scss
+++ b/src/feature/auth/ui/ForgotPassword/ForgotPassword.module.scss
@@ -1,5 +1,6 @@
-.wrapper {
+.card {
   width: 378px;
+  margin: 72px auto 0;
   padding: 23px;
 }
 
@@ -33,4 +34,10 @@
   font-size: 12px;
   font-weight: 500;
   line-height: 14px;
+}
+
+@media (width <= 768px) {
+  .card {
+    display: none;
+  }
 }
