IN-35 init: forgot password

--- a/src/feature/auth/ui/ForgotPassword/ForgotPassword.module.scss
+++ b/src/feature/auth/ui/ForgotPassword/ForgotPassword.module.scss
@@ -38,6 +38,38 @@
 
 @media (width <= 768px) {
   .card {
-    display: none;
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+    margin: 0;
+    padding: 17px 15px 0;
+
+    background-color: inherit;
+    border: none;
+  }
+
+  .title {
+    font-size: var(--font-size-l);
+    line-height: var(--line-height-m);
+  }
+
+  .textField {
+    margin-top: 31px;
+  }
+
+  .recaptcha {
+    order: 1;
+    margin-top: 53px;
+  }
+
+  .linkWrapper {
+    order: 3;
+    margin-top: 24px;
+  }
+
+  .button {
+    order: 2;
+    margin-top: 36px;
   }
 }
