IN-36: fix: remove Controller, add classNames for tags

--- a/src/feature/auth/ui/CreateNewPasswordForm/CreateNewPasswordForm.module.scss
+++ b/src/feature/auth/ui/CreateNewPasswordForm/CreateNewPasswordForm.module.scss
@@ -3,17 +3,13 @@
   flex-direction: column;
   align-items: center;
 
-  width: 378px;
+  width: 100%;
+  max-width: 378px;
   padding: 23px 24px 36px;
+}
 
-  h1 {
-    padding-bottom: 37px;
-  }
-
-  p {
-    padding-bottom: 41px;
-    color: var(--light-900);
-  }
+.title {
+  padding-bottom: 37px;
 }
 
 .firstTextField {
@@ -22,4 +18,9 @@
 
 .secondTextField {
   padding-bottom: 7px;
+}
+
+.limitations {
+  padding-bottom: 41px;
+  color: var(--light-900);
 }
