--- a/src/feature/auth/ui/EmailVerification/EmailVerification.module.scss
+++ b/src/feature/auth/ui/EmailVerification/EmailVerification.module.scss
@@ -1,5 +1,8 @@
 .wrapper {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .title {
@@ -8,24 +11,24 @@
 
 .text {
   width: 294px;
-  margin: 19px auto 0;
+  margin-top: 19px;
 }
 
 .button {
   margin-top: 30px;
 }
 
-.imageWrapper {
-  position: relative;
-  width: 473px;
-  height: 352px;
-  margin: 31px auto 0;
+.image {
+  width: 100%;
+  min-width: 330px;
+  max-width: 473px;
+  height: auto;
+  margin-top: 31px;
 }
 
 @media (width <= 768px) {
   .wrapper {
     padding: 0 15px;
-    text-align: center;
   }
 
   .title {
@@ -34,16 +37,11 @@
 
   .text {
     width: 100%;
+    max-width: 330px;
     margin-top: 15px;
   }
 
   .button {
     margin-top: 42px;
-  }
-
-  .imageWrapper {
-    width: 330px;
-    height: 246px;
-    margin-top: 30px;
   }
 }
