--- a/src/feature/auth/ui/ForgotPassword/ForgotPassword.module.scss
+++ b/src/feature/auth/ui/ForgotPassword/ForgotPassword.module.scss
@@ -17,7 +17,7 @@
   margin-top: 17px;
 }
 
-.linkWrapper {
+.link {
   display: flex;
   justify-content: center;
   margin-top: 30px;
@@ -63,7 +63,7 @@
     margin-top: 53px;
   }
 
-  .linkWrapper {
+  .link {
     order: 3;
     margin-top: 24px;
   }
