IN-36: fix: add action to the storybook, styles

--- a/src/feature/auth/ui/CreateNewPasswordForm/CreateNewPasswordForm.module.scss
+++ b/src/feature/auth/ui/CreateNewPasswordForm/CreateNewPasswordForm.module.scss
@@ -9,18 +9,18 @@
 }
 
 .title {
-  padding-bottom: 37px;
+  margin-bottom: 37px;
 }
 
 .firstTextField {
-  padding-bottom: 24px;
+  margin-bottom: 24px;
 }
 
 .secondTextField {
-  padding-bottom: 7px;
+  margin-bottom: 7px;
 }
 
 .limitations {
-  padding-bottom: 41px;
+  margin-bottom: 41px;
   color: var(--light-900);
 }
