IN-35 refactor: forgot password

--- a/src/feature/auth/ui/ForgotPassword/ForgotPassword.module.scss
+++ b/src/feature/auth/ui/ForgotPassword/ForgotPassword.module.scss
@@ -1,7 +1,12 @@
 .card {
+  display: flex;
+  flex-direction: column;
+
   width: 378px;
-  margin: 72px auto 0;
+  margin-top: 72px;
   padding: 23px;
+
+
 }
 
 .textField {
@@ -13,34 +18,24 @@
   color: var(--light-900);
 }
 
+
 .button {
   margin-top: 17px;
 }
 
 .link {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
+  margin: 30px auto;
 }
 
 .recaptcha {
   display: flex;
   align-items: center;
   justify-content: space-between;
-
-  margin-top: 30px;
   padding: 14px 20px;
-
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 14px;
 }
 
 @media (width <= 768px) {
   .card {
-    display: flex;
-    flex-direction: column;
-
     width: 100%;
     margin: 0;
     padding: 17px 15px 0;
