--- a/src/widgets/sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/sidebar/ui/Sidebar/Sidebar.module.scss
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: column;
 
+  width: 100%;
   max-width: 13.75rem;
-  height: calc(100vh - var(--header-height)); // minus header height
+  height: calc(100vh - var(--header-height));
   padding: 4.5rem 0 2.25rem;
 
   background-color: var(--dark-700);
