--- a/src/feature/auth/ui/SignUpForm/SignUpForm.module.scss
+++ b/src/feature/auth/ui/SignUpForm/SignUpForm.module.scss
@@ -3,20 +3,19 @@
   flex-direction: column;
 
   max-width: 378px;
-  min-height: 200px;
   margin: auto;
   padding: 24px;
+}
 
-  & > h1 {
-    margin-bottom: 20px;
-  }
+.formName {
+  margin-bottom: 20px;
+}
 
-  &_network {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 20px;
-  }
+.formNetwork {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .checkbox {
@@ -27,43 +26,16 @@
   font-size: 0.6rem;
 }
 
-.network_link {
-  width: 36px;
-  height: 36px;
+.networkLink {
   margin: 0 30px;
-  border-radius: 50%;
+  padding: 0;
+  outline-style: none;
 }
 
 .input {
   margin: 0 0 20px;
-
-  & > label {
-    padding: 0 0 4px;
-  }
 }
 
-.politics {
-  display: flex;
-  align-items: center;
-  padding: 0 0 20px;
-
-  & > div {
-    width: min-content;
-  }
-
-  & > p {
-    margin-left: 7px;
-    font-size: 12px;
-  }
-}
-
-.footer {
-  margin-top: 20px;
-  font-size: 16px;
-  line-height: 24px;
-  text-align: center;
-
-  & > p {
-    margin: 10px 0 15px;
-  }
+.footerText {
+  margin: 24px 0 14px;
 }
