IN-34 refactor: styles

--- a/src/feature/auth/ui/SignInForm/SignInForm.module.scss
+++ b/src/feature/auth/ui/SignInForm/SignInForm.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/styles/mixins';
+
 .card {
   width: 378px;
   padding: 24px;
@@ -42,7 +44,7 @@
 
 @media (width <= 768px) {
   .card {
-    width: 360px;
+    width: 100%;
     padding: 17px 15px;
     background-color: inherit;
     border: none;
