hotfix: add mixins for break points, add responsive for typography & congratulations

--- a/src/feature/auth/ui/Congratulations/Congratulations.module.scss
+++ b/src/feature/auth/ui/Congratulations/Congratulations.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/styles/mixins';
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -29,7 +31,7 @@
   margin-top: 72px;
 }
 
-@media (width <= 768px) {
+@include mobile-small {
   .wrapper {
     padding: 0 15px;
   }
