--- a/src/feature/auth/ui/CreateNewPasswordForm/CreateNewPasswordForm.module.scss
+++ b/src/feature/auth/ui/CreateNewPasswordForm/CreateNewPasswordForm.module.scss
@@ -1,10 +1,7 @@
-.card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+@import '@/app/styles/mixins';
 
-  width: 100%;
-  max-width: 378px;
+.card {
+  width: 378px;
   padding: 23px 24px 36px;
 }
 
@@ -23,4 +20,24 @@
 .limitations {
   margin-bottom: 41px;
   color: var(--light-900);
+}
+
+@include mobile-small {
+  .card {
+    width: 100%;
+    margin: 0;
+    padding: 17px 15px 0;
+
+    background-color: inherit;
+    border: none;
+  }
+
+  .title {
+    margin-bottom: 31px;
+  }
+
+  .limitations {
+    margin-bottom: 53px;
+    color: var(--light-900);
+  }
 }
