--- a/src/feature/auth/ui/EmailVerification/EmailVerification.module.scss
+++ b/src/feature/auth/ui/EmailVerification/EmailVerification.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/styles/mixins';
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -7,18 +9,22 @@
 
 .title {
   margin-top: 35px;
+  margin-bottom: 19px;
 }
 
 .text {
   width: 294px;
-  margin-top: 19px;
 }
 
 .button {
+  order: 1;
+  width: 229px;
   margin-top: 30px;
 }
 
 .image {
+  order: 2;
+
   width: 100%;
   min-width: 330px;
   max-width: 473px;
@@ -26,22 +32,28 @@
   margin-top: 31px;
 }
 
-@media (width <= 768px) {
+@include mobile-small {
   .wrapper {
     padding: 0 15px;
   }
 
   .title {
     margin-top: 17px;
+    margin-bottom: 13px;
   }
 
   .text {
     width: 100%;
     max-width: 330px;
-    margin-top: 15px;
+  }
+
+  .image {
+    order: 1;
   }
 
   .button {
+    order: 2;
+    width: 100%;
     margin-top: 42px;
   }
 }
