hotfix: add responsive for ForgotPassword

--- a/src/feature/auth/ui/ForgotPassword/ForgotPassword.module.scss
+++ b/src/feature/auth/ui/ForgotPassword/ForgotPassword.module.scss
@@ -1,10 +1,12 @@
+@import '@/app/styles/mixins';
+
 .card {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 
   width: 378px;
-  margin-top: 72px;
-  padding: 23px;
+  padding: 23px 24px 36px;
 }
 
 .textField {
@@ -17,21 +19,26 @@
 }
 
 .button {
+  order: 1;
   margin-top: 17px;
 }
 
 .link {
-  margin: 30px auto;
+  order: 2;
+  width: 100%;
+  margin: 24px auto;
 }
 
 .recaptcha {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  order: 3;
+
   padding: 14px 20px;
 }
 
-@media (width <= 768px) {
+@include mobile-small {
   .card {
     width: 100%;
     margin: 0;
@@ -39,11 +46,6 @@
 
     background-color: inherit;
     border: none;
-  }
-
-  .title {
-    font-size: var(--font-size-l);
-    line-height: var(--line-height-m);
   }
 
   .textField {
