hotfix: #5: add defaultValues in forms, remove index in hooks, add translations

--- a/src/widgets/sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -1,7 +1,7 @@
 .item {
   all: unset;
   cursor: pointer;
-  padding: 0.75rem 3rem 0.75rem 3.75rem;
+  padding: 0.75rem 3rem;
   transition: color 0.2s linear;
 
   &:hover {
