--- a/src/shared/ui/Select/Select.module.scss
+++ b/src/shared/ui/Select/Select.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/styles/mixins';
+
 .withPagination {
   padding: 4px 2px 4px 6px;
   font-size: var(--font-size-s);
@@ -125,6 +127,41 @@
     &[data-highlighted] {
       background-color: var(--dark-300);
       transition: all 0.2s linear;
+    }
+  }
+}
+
+@include mobile-small {
+  .viewport {
+    background-color: inherit;
+    outline: none;
+
+    .item {
+      &[data-highlighted] {
+        background-color: inherit;
+      }
+
+      .text {
+        display: none;
+      }
+    }
+  }
+
+  .root {
+    width: 70px;
+
+    .trigger {
+      outline: none !important;
+
+      &[data-state='open'] {
+        background-color: inherit;
+      }
+
+      span {
+        .text {
+          display: none;
+        }
+      }
     }
   }
 }
