test IN-90: for test

--- a/src/feature/auth/ui/ForgotPasswordForm/ForgotPasswordForm.module.scss
+++ b/src/feature/auth/ui/ForgotPasswordForm/ForgotPasswordForm.module.scss
@@ -34,6 +34,23 @@
   padding: 14px 20px;
 }
 
+.dialogContainer {
+  width: 378px;
+}
+
+.modal {
+  padding: 24px;
+}
+
+.modalBtn {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.modalMessage {
+  margin-bottom: 24px;
+}
+
 @include mobile-small {
   .card {
     width: 100%;
