--- a/src/widgets/dialogs/ui/DialogEmailSent/DialogEmailSent.module.scss
+++ b/src/widgets/dialogs/ui/DialogEmailSent/DialogEmailSent.module.scss
@@ -4,11 +4,11 @@
   width: 378px;
   padding: 30px 24px 36px;
 
-  button {
-    margin-top: 18px;
-  }
-
   &:last-child {
     align-items: end;
   }
+}
+
+.close {
+  margin-top: 18px;
 }
