hotfix: merge mobile & desktop lang switcher
Refactor Select styles

--- a/src/widgets/header/ui/Header/Header.module.scss
+++ b/src/widgets/header/ui/Header/Header.module.scss
@@ -43,8 +43,8 @@
   margin-left: 1.5rem;
 }
 
-.lang {
-  display: block;
+/* .lang {
+  display: flex;
 }
 
 .langMobile {
@@ -57,6 +57,6 @@
   }
 
   .langMobile {
-    display: block;
+    display: flex;
   }
-}
+} */
