--- a/src/shared/ui/Select/Select.module.scss
+++ b/src/shared/ui/Select/Select.module.scss
@@ -1,8 +1,21 @@
+.root {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.label {
+  user-select: none;
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-m);
+  color: var(--light-900);
+}
+
 .withPagination {
   padding: 4px 2px 4px 6px;
   font-size: var(--font-size-s);
 
-  .icon {
+  & .icon {
     width: 17px;
     height: 17px;
   }
@@ -12,91 +25,72 @@
   padding: 6px 10px 6px 12px;
   transition: all 0.1s linear;
 
-  .icon {
-    width: 24px;
-    height: 24px;
-  }
-
   &:hover {
     color: var(--primary-500);
   }
 }
 
-.root {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+.trigger {
+  cursor: pointer;
 
-  .label {
-    user-select: none;
-    font-size: var(--font-size-s);
-    line-height: var(--line-height-m);
-    color: var(--light-900);
+  position: relative;
+
+  display: inline-flex;
+  gap: 4px;
+  align-items: center;
+  justify-content: space-between;
+
+  box-sizing: border-box;
+
+  background-color: var(--dark-700);
+  border: none;
+  border-radius: 2px;
+  outline: 1px solid var(--dark-100);
+
+  transition: all 0.1s linear;
+
+  & .icon {
+    width: 24px;
+    height: 24px;
   }
 
-  .trigger {
-    cursor: pointer;
+  &[data-state='open'] {
+    background-color: var(--dark-500);
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    outline: 1px solid;
 
-    position: relative;
+    & .icon {
+      rotate: 90deg;
+      transition: rotate 0.2s linear;
+    }
+  }
 
-    display: inline-flex;
-    gap: 4px;
-    align-items: center;
-    justify-content: space-between;
+  &[data-state='closed'] {
+    & .icon {
+      rotate: 270deg;
+      transition: rotate 0.2s linear;
+    }
+  }
 
-    box-sizing: border-box;
+  &:hover {
+    color: var(--light-100);
+    outline: 1px solid var(--light-900);
+  }
 
-    background-color: var(--dark-700);
-    border: none;
-    border-radius: 2px;
+  &[data-disabled] {
+    cursor: inherit;
+    color: var(--dark-100);
     outline: 1px solid var(--dark-100);
 
-    transition: all 0.1s linear;
-
-    &[data-state='open'] {
-      background-color: var(--dark-500);
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0;
-      outline: 1px solid;
-
-      .icon {
-        rotate: 90deg;
-        transition: rotate 0.2s linear;
-      }
-    }
-
-    &[data-state='closed'] {
-      .icon {
-        rotate: 270deg;
-        transition: rotate 0.2s linear;
-      }
-    }
-
-    span {
-      display: flex;
-      gap: 12px;
-      align-items: center;
-    }
-
-    &:hover {
-      color: var(--light-100);
-      outline: 1px solid var(--light-900);
-    }
-
-    &[data-disabled] {
-      cursor: inherit;
+    & .icon {
       color: var(--dark-100);
-      outline: 1px solid var(--dark-100);
-
-      .icon {
-        color: var(--dark-100);
-      }
     }
+  }
 
-    &:focus-visible {
-      outline: 2px solid var(--primary-500);
-      transition: all 1ms linear;
-    }
+  &:focus-visible {
+    outline: 2px solid var(--primary-500);
+    transition: all 1ms linear;
   }
 }
 
@@ -112,19 +106,20 @@
   background-color: var(--dark-500);
   border-radius: 0 0 2px 2px;
   outline: 1px solid;
+}
 
-  .item {
-    display: flex;
-    gap: 12px;
-    align-items: center;
+.item {
+  outline: none;
 
-    line-height: var(--line-height-m);
-
-    outline: none;
-
-    &[data-highlighted] {
-      background-color: var(--dark-300);
-      transition: all 0.2s linear;
-    }
+  &[data-highlighted] {
+    background-color: var(--dark-300);
+    transition: all 0.2s linear;
   }
+}
+
+.text {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  line-height: var(--line-height-m);
 }
