IN-90 feat: add password-recovery

--- a/src/feature/auth/ui/ForgotPasswordForm/ForgotPasswordForm.module.scss
+++ b/src/feature/auth/ui/ForgotPasswordForm/ForgotPasswordForm.module.scss
@@ -14,6 +14,10 @@
   color: var(--light-900);
 }
 
+.success {
+  margin-top: 30px;
+}
+
 .button {
   order: 1;
   margin-top: 17px;
@@ -32,23 +36,6 @@
   order: 3;
 
   padding: 14px 20px;
-}
-
-.dialogContainer {
-  width: 378px;
-}
-
-.modal {
-  padding: 24px;
-}
-
-.modalBtn {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.modalMessage {
-  margin-bottom: 24px;
 }
 
 @include mobile-small {
