--- a/src/pages/auth/forgot-password/ForgotPassword.module.scss
+++ b/src/pages/auth/forgot-password/ForgotPassword.module.scss
@@ -1,5 +1,20 @@
 .block {
-  display: grid;
-  place-items: center;
-  height: max(100vh - 60px);
+  margin: 70px auto;
+}
+
+.dialogContainer {
+  width: 378px;
+}
+
+.modal {
+  padding: 24px;
+}
+
+.modalBtn {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.modalMessage {
+  margin-bottom: 24px;
 }
