--- a/src/feature/auth/ui/LogOut/LogOut.module.scss
+++ b/src/feature/auth/ui/LogOut/LogOut.module.scss
@@ -1,5 +1,8 @@
 .logout {
+  justify-content: start;
+
   margin-top: auto;
+  padding: 0.75rem 3rem;
 
   font-size: var(--font-size-s);
   font-weight: var(--font-weight-medium);
