--- a/src/shared/ui/RadioGroup/RadioGroup.module.scss
+++ b/src/shared/ui/RadioGroup/RadioGroup.module.scss
@@ -1,71 +1,5 @@
-.RadioGroupRoot {
+.root {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-}
-
-.block {
-  display: flex;
-  align-items: center;
-}
-
-.RadioGroupItem {
-  width: 25px;
-  height: 25px;
-
-  background-color: var(--dark-900);
-  border: 2px solid var(--light-100);
-  border-radius: 100%;
-  box-shadow: 0 2px 10px var(--dark-900);
-
-  &[data-disabled] {
-    cursor: default;
-    border-color: var(--light-900);
-  }
-
-  &[data-disabled]:hover::before {
-    background-color: transparent;
-  }
-}
-
-.RadioGroupItem:hover {
-  background-color: var(--light-100);
-}
-
-.RadioGroupItem:focus {
-  box-shadow: 0 0 0 2px black;
-}
-
-.RadioGroupIndicator {
-  position: relative;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 100%;
-  height: 100%;
-
-  &[data-disabled]::after {
-    background-color: var(--light-500);
-  }
-}
-
-.RadioGroupIndicator::after {
-  content: '';
-
-  display: block;
-
-  width: 12px;
-  height: 12px;
-
-  background-color: var(--light-100);
-  border-radius: 50%;
-}
-
-.Label {
-  padding-left: 15px;
-  font-size: 15px;
-  line-height: 1;
-  color: white;
+  gap: 24px;
 }
