--- a/src/shared/ui/Notification/Notification.module.scss
+++ b/src/shared/ui/Notification/Notification.module.scss
@@ -1,3 +1,22 @@
 .notification {
-  display: flex;
+  padding: 6px 24px;
+
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 150%;
+  color: var(--light-100);
+  text-align: center;
+
+  background-color: var(--success-900);
+  border: 1px solid var(--success-500);
+  border-radius: 2px;
+}
+
+.titleError {
+  font-weight: 700;
+}
+
+.error {
+  background-color: var(--danger-900);
+  border: 1px solid var(--danger-500);
 }
