--- a/src/shared/ui/DatePicker/CustomHeader/CustomHeader.module.scss
+++ b/src/shared/ui/DatePicker/CustomHeader/CustomHeader.module.scss
@@ -3,7 +3,8 @@
   align-items: center;
   justify-content: space-between;
 
-  padding: 16px 24px;
+  margin-bottom: 12px;
+  padding: 0 6px;
 
   background-color: var(--dark-500);
 }
@@ -11,6 +12,8 @@
 .date {
   font-size: var(--font-size-m);
   font-weight: var(--font-weight-bold);
+  line-height: var(--line-height-m);
+  color: var(--light-100);
 }
 
 .buttons {
@@ -18,7 +21,7 @@
   align-items: center;
   justify-content: center;
 
-  > .button {
+  & .button {
     cursor: pointer;
 
     display: flex;
