IN-67 refactor: props, styles, stories

--- a/src/shared/ui/DatePicker/CustomHeader/CustomHeader.module.scss
+++ b/src/shared/ui/DatePicker/CustomHeader/CustomHeader.module.scss
@@ -34,5 +34,13 @@
 
     background-color: var(--dark-100);
     border-radius: 50%;
+
+    &:hover {
+      background-color: var(--light-900);
+    }
+
+    &:active {
+      background-color: var(--light-100);
+    }
   }
 }
