--- a/src/shared/ui/DatePicker/CustomInput/CustomInput.module.scss
+++ b/src/shared/ui/DatePicker/CustomInput/CustomInput.module.scss
@@ -7,6 +7,25 @@
   color: var(--light-900);
 }
 
+.disabled {
+  color: var(--dark-100);
+}
+
+.error {
+  color: var(--light-100);
+  outline: 1px solid var(--danger-500);
+
+  & + .calendar {
+    color: var(--danger-500);
+  }
+}
+
+.errorText {
+  font-size: var(--font-size-s);
+  line-height: var(--line-height-m);
+  color: var(--danger-500);
+}
+
 .textField {
   display: flex;
   flex-direction: column;
@@ -72,19 +91,4 @@
   &:hover:not(:disabled, :focus-visible, .error) {
     outline: 1px solid var(--light-900);
   }
-}
-
-.disabled {
-  color: var(--dark-100);
-}
-
-.error {
-  color: var(--light-100);
-  outline: 1px solid var(--danger-500);
-}
-
-.errorText {
-  font-size: var(--font-size-s);
-  line-height: var(--line-height-m);
-  color: var(--danger-500);
 }
